solved P118_Pascals_Triangle